- File beebeep.rc can be placed also in /etc folder in Unix like systems (Linux and MacOSX)
- User and chat tooltips show also unsent messages
- New feature: you can test your network connections in menu "Main" - "Test your network"  
- Added "Show tips and facts of the day" option in menu "Settings" - "On connection"
- File share: file icons are now selected from file mimetype in Linux.

BeeBEEP 5.6.2 
- New feature: you can also send files (dragging and) dropping them on the user in main user list window
- Added "RaiseMainWindowOnNewMessageArrived" option
-(Desktop Sharing feature re-enabled)

BeeBEEP 5.6.1
- Updated to Qt 5.9.8 (Windows)
- Fixed an error in group notification when new message arrives
- Windows installer now creates a rule in firewall for BeeBEEP 
- Added "ShowChatsOnConnection" option to show the chat list at startup
- Added "HideEmptyChatsInList" option to hide empty chats in list
- (Disabled Desktop Sharing feature for testing)

BeeBEEP 5.6.0
- Now the Avatar icon border in the chat right panel will be yellow if the messages have not yet been 
  displayed in the user's chat.
- If option "Always open chat on new message" is enabled and "Raise previously opened 
  chat on new message" is disabled, the window is now opened minimized to show icon
  blinking on taskbar.
- Added "AllowEditNickname" option in beebeep.rc
- Fixed a bug on saving option "Recognize user by"
- Added "DisableCreateMessage" option in beebeep.rc
- Added "ActiveWindowOpacityLevel" and "InactiveWindowOpacityLevel" option for chat window
- Added "BackgroundColor", "DefaultTextColor" and "SystemTextColor" option for chat window
- Added "EnableDefaultChatNotifications" option
- Added "Regenerate HASH code" button in Edit Profile window (to easily avoid "same HASH errors")
- Added notification a few days before user's birthday event (birthday is now saved with user data)
- Added flag "Important!!" to chat message in "create message" window (raise the receiver chat window on top)